#1 Fix word wrap for process log

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
 .log-accordion {
-  max-width: 80%;
-  overflow-x: scroll;
+  word-wrap: break-word;
+  white-space: pre-wrap;
 }
